--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,8 @@ WORKDIR /tmp
 
 # build and env args used by package-manager
 ARG COMPILER_TYPE=gcc
-ARG COMPILER_VERSION=8
+ARG GCC_VERSION=9
+ARG CLANG_VERSION=9
 ARG ENABLE_DISPLAY=1
 
 # package-manager configuration
