--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -29,8 +29,21 @@ set(@PROJECT_NAME@_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 # installed and interface libraries
 set(@PROJECT_NAME@_COMPILED_LIBRARIES @TIMEMORY_COMPILED_LIBRARIES@)
 set(@PROJECT_NAME@_INTERFACE_LIBRARIES @TIMEMORY_INTERFACE_LIBRARIES@)
-set(@PROJECT_NAME@_EXTERN_LIBRARIES @TIMEMORY_EXTERN_LIBRARIES@)
 set(@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES @TIMEMORY_EMPTY_INTERFACE_LIBRARIES@)
+
+set(_EMPTY_BUT_REQUIRED_INTERFACES)
+foreach(_EMPTY_INTERFACE ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
+    string(REPLACE "@PROJECT_NAME@-" "" _NAME "${_EMPTY_INTERFACE}")
+    if(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
+        list(APPEND _EMPTY_BUT_REQUIRED_INTERFACES ${_NAME})
+    endif()
+endforeach()
+
+if(_EMPTY_BUT_REQUIRED_INTERFACES)
+    string(REPLACE ";" ", " _REQ "${_EMPTY_BUT_REQUIRED_INTERFACES}")
+    message(FATAL_ERROR
+        "timemory was not compiled with support for required interface libraries: ${_REQ}")
+endif()
 
 if(TIMEMORY_PYTHON_BINDINGS)
     set(@PROJECT_NAME@_PYTHON_MODULE_PREFIX "@PYTHON_MODULE_PREFIX@" CACHE STRING
@@ -41,6 +54,12 @@ if(TIMEMORY_PYTHON_BINDINGS)
         "@PROJECT_NAME@ Python major version")
     set(@PROJECT_NAME@_PYTHON_VERSION_MINOR "@PYTHON_VERSION_MINOR@" CACHE STRING
         "@PROJECT_NAME@ Python minor version")
+    set(@PROJECT_NAME@_PYBIND11_VERSION_MAJOR "@PYBIND11_VERSION_MAJOR@" CACHE STRING
+        "@PROJECT_NAME@ PyBind11 major version")
+    set(@PROJECT_NAME@_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_MINOR@" CACHE STRING
+        "@PROJECT_NAME@ PyBind11 minor version")
+    set(@PROJECT_NAME@_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_PATCH@" CACHE STRING
+        "@PROJECT_NAME@ PyBind11 minor version")
 endif()
 
 if(@PROJECT_NAME@_LANGUAGE_STANDARDS)
