CMake fix for BUILD_STATIC_LIBS + TIMEMORY_USE_PYTHON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ endif()
 if("${CMAKE_BUILD_TYPE}" STREQUAL "")
     set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
 endif()
+# install directories
+include(GNUInstallDirs)
 # cmake installation folder
 set(CMAKE_INSTALL_CONFIGDIR  ${CMAKE_INSTALL_DATAROOTDIR}/cmake/${PROJECT_NAME}
     CACHE PATH "Installation directory for CMake package config files")
@@ -136,6 +138,7 @@ else()
         if(NOT TIMEMORY_BUILD_QUIET)
             message(AUTHOR_WARNING "BUILD_SHARED_LIBS=OFF --> disabling TIMEMORY_BUILD_PYTHON...")
             set(TIMEMORY_BUILD_PYTHON OFF)
+            set(TIMEMORY_USE_PYTHON OFF)
         endif()
     endif()
 endif()
@@ -171,7 +174,6 @@ unset(_TLS_OPTIONS)
 
 include(ClangFormat)
 include(Compilers)
-include(GNUInstallDirs)
 include(BuildSettings)
 include(Packages)
 include(CMakeParseArguments)
