--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-if(NOT TIMEMORY_BUILD_GTEST OR NOT TIMEMORY_BUILD_TESTING)
+if(NOT TIMEMORY_BUILD_GTEST AND NOT TIMEMORY_BUILD_TESTING)
 	return()
 endif()
 
