--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -47,6 +47,33 @@ __status__ = "Development"
 # get the path to this directory
 this_path = os.path.abspath(os.path.dirname(__file__))
 
+
+os.environ["PROFILESELECTED"] = "1"
+'''
+Setting PROFILESELECTED=1 attempts to ensure that when gperftools is linked,
+cpu profiler, heap checker, and heap profiler lie dormant until activated.
+
+Other relevant gperftools environment variables:
+
+    HEAPPROFILE=<pre>       -- turns on heap profiling and dumps data using this prefix
+    HEAPCHECK=<type>        -- turns on heap checking with strictness 'type'
+    CPUPROFILE=<file>       -- turns on cpu profiling and dumps data to this file.
+    PROFILESELECTED=1       -- if set, cpu-profiler will only profile regions of code
+                               surrounded with ProfilerEnable()/ProfilerDisable().
+    CPUPROFILE_FREQUENCY=x  -- how many interrupts/second the cpu-profiler samples.
+    PERFTOOLS_VERBOSE=<lvl> -- the higher level, the more messages malloc emits
+    MALLOCSTATS=<level>     -- prints memory-use stats at program-exit
+
+See also: https://github.com/gperftools/gperftools
+
+If applications that use timemory + gperftools experience errors during exit w.r.t.
+corrupted sizes, set:
+
+    export LD_PRELOAD=/path/to/libmalloc.so
+
+before BEFORE running Python
+'''
+
 try:
     from . import libpytimemory
     from . import plotting
@@ -104,6 +131,7 @@ try:
                ]
 
     timemory_init(sys.argv[:])
+
 except Exception as e:
     exc_type, exc_value, exc_traceback = sys.exc_info()
     traceback.print_exception(exc_type, exc_value, exc_traceback)
