More gperftools CMake fixes
- new TIMEMORY_FORCE_GPERF_PYTHON option
- improved logic for TIMEMORY_{USE,BUILD}_PYTHON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,12 +148,12 @@ mark_as_advanced(TIMEMORY_BUILD_QUIET)
 if(SKBUILD)
     set(_BUILD_SHARED_CXX ON)
 else()
-    if(TIMEMORY_BUILD_PYTHON AND NOT BUILD_SHARED_LIBS)
+    if((TIMEMORY_BUILD_PYTHON OR TIMEMORY_USE_PYTHON) AND NOT BUILD_SHARED_LIBS)
         if(NOT TIMEMORY_BUILD_QUIET)
             message(AUTHOR_WARNING "BUILD_SHARED_LIBS=OFF --> disabling TIMEMORY_BUILD_PYTHON...")
-            set(TIMEMORY_BUILD_PYTHON OFF)
-            set(TIMEMORY_USE_PYTHON OFF)
         endif()
+        set(TIMEMORY_BUILD_PYTHON OFF)
+        set(TIMEMORY_USE_PYTHON OFF)
     endif()
 endif()
 
@@ -165,7 +165,7 @@ endif()
 set(_TLS_DESCRIPT "Thread-local static model: 'global-dynamic', 'local-dynamic', 'initial-exec', 'local-exec'")
 set(_TLS_OPTIONS "global-dynamic" "local-dynamic" "initial-exec" "local-exec")
 
-if(SKBUILD OR TIMEMORY_BUILD_PYTHON)
+if(SKBUILD OR TIMEMORY_BUILD_PYTHON OR TIMEMORY_USE_PYTHON)
     set(TIMEMORY_TLS_MODEL "global-dynamic" CACHE STRING "${_TLS_DESCRIPT}")
     # ensure local override
     set(TIMEMORY_TLS_MODEL "global-dynamic")
