Roofline test updates and DartMeasurementFile support

--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -28,6 +28,7 @@ from __future__ import absolute_import
 import sys
 import os
 import imp
+import copy
 import ctypes
 import platform
 import warnings
@@ -130,7 +131,14 @@ try:
                'timemory_init',
                ]
 
-    timemory_init(sys.argv[:])
+    # print("{}".format(sys.argv[:]))
+    args = copy.copy(sys.argv)
+    while len(args) > 0 and args[0][0] == '-':
+        args.pop(0)
+    # print("{}".format(args))
+    if len(args) == 0:
+        args.append("python")
+    timemory_init(args)
 
 except Exception as e:
     exc_type, exc_value, exc_traceback = sys.exc_info()
