--- a/.travis.yml
+++ b/.travis.yml
@@ -28,21 +28,20 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs static'"
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--papi --mpi --build-libs static'"
     # GCC 7
     - os: linux
-      dist: xenial
+      dist: bionic
       python: "3.6"
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - gcc-7
-            - g++-7
+            - gcc
+            - g++
             - build-essential
             - libmpich-dev
             - mpich
@@ -53,7 +52,7 @@ matrix:
             - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_ARGS='--build-libs static --caliper'"
+        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && COVERAGE=1 && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs static --mpi --papi --caliper --coverage'"
     #
     # GCC 8
     - os: linux
@@ -73,10 +72,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --papi'"
     # Clang 5.0
     - os: linux
       dist: xenial
@@ -96,10 +94,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs static'"
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs static --mpi --papi'"
     # Clang 7
     - os: linux
       dist: bionic
@@ -116,10 +113,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs static --caliper --mpi --papi'"
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7
@@ -143,10 +139,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs shared --gotcha'"
+        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=MinSizeRel && BUILD_ARGS='--build-libs shared --mpi --papi --gotcha'"
     #
     # GCC 8
     - os: linux
@@ -166,10 +161,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi'"
     # Clang 5.0
     - os: linux
       dist: xenial
@@ -189,10 +183,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && COVERAGE=1 && BUILD_ARGS='--build-libs shared'"
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs shared --mpi --papi'"
     # Clang 7
     - os: linux
       dist: bionic
@@ -209,10 +202,9 @@ matrix:
             - papi-tools
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi'"
 
     # ------------------------------------------------------------------------ #
 
@@ -220,8 +212,6 @@ before_install:
   - eval "${MATRIX_EVAL}"
   - export CC=${CC}
   - export CXX=${CXX}
-  - export TIMEMORY_VERBOSE=4
-  - export TIMEMORY_OUTPUT_TOTAL=1
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p ${HOME}/miniconda
   - export PATH="${HOME}/miniconda/bin:${PATH}"
@@ -232,10 +222,8 @@ install:
   - env
   - conda create -c defaults -c conda-forge -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow gperftools
   - source activate pyctest
-  # - python setup.py install --build-type=Debug -- -DTIMEMORY_BUILD_C=OFF -DTIMEMORY_BUILD_TOOLS=OFF -DBUILD_STATIC_LIBS=OFF -DTIMEMORY_USE_CALIPER=ON -DTIMEMORY_USE_GOTCHA=ON -- -j2
-  - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --no-mpi ${BUILD_ARGS}"
+  - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --python ${BUILD_ARGS}"
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
-  - if [ -z "${USE_MPI}" ]; then ARGS="${ARGS} --no-mpi"; fi
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; else ARGS="${ARGS} --profile=cpu"; fi
   - travis_wait 75 python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE} -- -VV
 
@@ -248,6 +236,7 @@ after_success:
   - eval "${MATRIX_EVAL}"
   - SUBMIT_COVERAGE=0
   - if [ -n "${COVERAGE}" ]; then SUBMIT_COVERAGE=1; fi
+  - if [ -z "$(which lcov)" ]; then SUBMIT_COVERAGE=0; fi
   # Create lcov report: capture coverage info, filter, debugging, and upload
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --directory . --capture --output-file coverage.info ; fi
   - if [ "${SUBMIT_COVERAGE}" -gt 0 ]; then lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' '*/external/*' --output-file coverage.info; fi
