--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -38,6 +38,12 @@ set(ENV{TIMEMORY_ENABLED} OFF)
 
 add_subdirectory(external)
 
+add_timemory_google_test(stl_overload_tests
+    DISCOVER_TESTS
+    SOURCES         stl_overload_tests.cpp
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
+
 add_timemory_google_test(user_bundle_tests
     DISCOVER_TESTS
     SOURCES         user_bundle_tests.cpp
