--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ matrix:
             - google-perftools
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --papi'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --papi -- -DCMAKE_CXX_STANDARD=14'"
     # Clang 5.0
     - os: linux
       dist: xenial
@@ -182,7 +182,7 @@ matrix:
             - google-perftools
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs shared --mpi --papi -- -DCMAKE_CXX_STANDARD=17'"
     # Clang 5.0
     - os: linux
       dist: xenial
@@ -223,7 +223,7 @@ matrix:
             - google-perftools
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--build-libs shared --gotcha --caliper --mpi --papi -- -DCMAKE_CXX_STANDARD=17'"
 
     # ------------------------------------------------------------------------ #
 
