--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -29,6 +29,7 @@ import sys
 import os
 import imp
 import copy
+import atexit
 import ctypes
 import platform
 import warnings
@@ -139,6 +140,7 @@ try:
     if len(args) == 0:
         args.append("python")
     timemory_init(args)
+    atexit.register(timemory_finalize)
 
 except Exception as e:
     exc_type, exc_value, exc_traceback = sys.exc_info()
