current_peak_rss + improved math support + simplified settings
- added runtime support for is_available
- fixes to storage::stack_clear
- added current_peak_rss component
- math support for STL types is more generic
- settings generates far fewer symbols in binary
- binary sizes significantly reduced
- delayed instantiation of base class for components
- Makefile include generation
- Dyninst and Kokkos support in build system
- JSON non-pretty print: this requires a customized cereal implementation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,4 +34,7 @@ add_subdirectory(ex-ert)
 add_subdirectory(ex-cpu-roofline)
 add_subdirectory(ex-gpu-roofline)
 
+# Python related
+add_subdirectory(ex-python)
+
 cmake_policy(POP)
