--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -154,6 +154,21 @@ if(TIMEMORY_INSTALL_TREE)
         find_package(gotcha QUIET)
     endif()
 
+    set(Kokkos_DIR "@Kokkos_DIR@")
+    if(NOT "${Kokkos_DIR}" STREQUAL "")
+        find_package(Kokkos QUIET)
+    endif()
+
+    set(Dyninst_DIR "@Dyninst_DIR@")
+    if(NOT "${Dyninst_DIR}" STREQUAL "")
+        find_package(Dyninst QUIET)
+    endif()
+
+    set(Boost_DIR "@Boost_DIR@")
+    if(NOT "${Boost_DIR}" STREQUAL "")
+        find_package(Boost QUIET COMPONENTS @TIMEMORY_BOOST_COMPONENTS@)
+    endif()
+
     include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-library-depends.cmake)
     check_required_components(@PROJECT_NAME@)
 
