--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -138,8 +138,10 @@ try:
     # print("{}".format(args))
     if len(args) == 0:
         args.append("python")
-    timemory_init(args)
-    atexit.register(timemory_finalize)
+    if os.environ.get("TIMEMORY_LIBRARY_CTOR", True) is None:
+        timemory_init(args)
+    if os.environ.get("TIMEMORY_LIBRARY_DTOR", True) is None:
+        atexit.register(timemory_finalize)
 
 except Exception as e:
     exc_type, exc_value, exc_traceback = sys.exc_info()
