--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -86,8 +86,18 @@ install(TARGETS timem DESTINATION bin)
 # Build, link, and install timemory-run
 #
 if(TIMEMORY_USE_DYNINST)
+    find_library(DYNINST_API_RT dyninstAPI_RT
+        HINTS ${Dyninst_DIR}
+        PATHS ${Dyninst_DIR}
+        PATH_SUFFIXES lib)
+    
     add_executable(timemory-run timemory-run.cpp)
 
+    if(DYNINST_API_RT)
+        target_compile_definitions(timemory-run PRIVATE
+            DYNINST_API_RT="${DYNINST_API_RT}")
+    endif()
+    
     target_link_libraries(timemory-run PRIVATE
         timemory-compile-options
         timemory-arch
